feat: refactor codes other than anime, poll
Made-with: Cursor