@@ -1,15 +1,12 @@
 package com.hogimn.myanimechart.service.batch;
 
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
-@Slf4j
 @RequiredArgsConstructor
 public class BatchService {
     private final BatchRepository batchRepository;
@@ -26,6 +23,6 @@ public class BatchService {
         return batchRepository.findAll()
                 .stream()
                 .map(BatchResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
